--- a/src/view/css/panel.css
+++ b/src/view/css/panel.css
@@ -50,7 +50,7 @@
 }
 .messages-container {
   flex: 1;
-  padding: 12px;
+  padding: 12px 12px 180px;
   overflow-x: hidden;
   overflow-y: auto;
 }
