refactor: 改历史聊天的样式

--- a/src/view/css/panel.css
+++ b/src/view/css/panel.css
@@ -101,6 +101,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.history-item:last-child {
+  border: 0;
+}
 .history-item button {
   display: none;
 }
