--- a/src/view/css/panel.css
+++ b/src/view/css/panel.css
@@ -34,6 +34,8 @@
   border-radius: 16px;
   border: 1px solid rgba(114, 118, 139, 0.16);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
 }
 .user-input {
   border: 0;
