fix: 增加 message table 间距

--- a/src/view/css/panel.css
+++ b/src/view/css/panel.css
@@ -112,6 +112,8 @@
 
 .message.assistant .content-container table {
   border-collapse: collapse;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
 
 .message.assistant .content-container th,
